--- a/bloom-api/templates/relatorio.html
+++ b/bloom-api/templates/relatorio.html
@@ -101,6 +101,7 @@
     <header id="header_content">
         <img src="{{logo}}" class="logo">
         <h1>Relatório da Gestante</h1>
+        <p> Relatorio {relatorio.tipo} </p>
     </header>
     
     <div id="footer_content">
